# rm_learning_project

./: README.md
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/smb_common/smb_gazebo/launch/: change.launch  smb_gazebo.launch
catkin_ws/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
catkin_ws/src/smb_highlevel_controller/config/: scan.yaml
catkin_ws/src/smb_highlevel_controller/launch/: distance.launch  smb_highlevel_controller.launch
catkin_ws/src/smb_highlevel_controller/src/: cmd_vel_publisher.cpp  scan_suscriber.cpp
catkin_ws/src/tutorial/: package.xml
reaction_wheel_model/: reaction_wheel_model.urdf.xacro
rm_code_note/controllers/: gimbal_controllers.md  shooter_controller.md
rm_code_note/manual/: add_remark.md  chassis_gimbal_manual.md  chassis_gimbal_shooter_cover_manual.md  chassis_gimbal_shooter_manual.md  engineer_manual.md  main.md  manual_base.md
study_report/: CAN总线学习报告.md  PID学习报告.md  RM电机学习报告.md  ROS_Navigation.md  传感器学习报告.md  底盘轮系学习报告.md
